<resources>

    <string name="app_name">FriendTracker</string>
    <string name="hello_world">Herpaderpaderp!!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity"></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">E-mail</string>
    <string name="repass">Re-enter Password</string>
    <string name="regbtn">Submit</string>
	<string	name="errorstring">CHECK</string>
	<string name="setting1">Setting1</string>
	<string name="setting2">Setting2</string>
	<string name="setting3">Setting3</string>
	<string name="setting4">Setting4</string>
	<string name="setting5">Setting5</string>
	<string name="setting6">Setting6</string>
	<string name="setting7">Setting7</string>
	<string name="setting8">Setting8</string>
	<string name="cancel">Cancel</string>
	<string name="agree">Agree</string>
	<string name="dialog_fire_missiles">Do you want to fire ze missiles?</string>
</resources>