<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background" >

    <EditText
        android:id="@+id/reguser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/regemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/regpass1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/regpass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/repass" />

    <Button
        android:id="@+id/regbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regbtn" />

    <TextView
        android:id="@+id/regerror"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="" />

</LinearLayout>