<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="right"
    android:fadingEdge="horizontal"
    android:fadingEdgeLength="250dp" >

    <TableRow
        android:id="@+id/set1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/setting1"
            android:layout_gravity="left|center_vertical"
            android:text="@string/setting1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/check1"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

    </TableRow>
        <View
        android:layout_height="2dip"
        android:background="#FF0000" />

    <TableRow
        android:id="@+id/set2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/setting2"
            android:layout_gravity="left|center_vertical"
            android:text="@string/setting2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/check2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

    </TableRow>
        <View
        android:layout_height="2dip"
        android:background="#FF0000" />

    <TableRow
        android:id="@+id/set3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/setting3"
            android:layout_gravity="left|center_vertical"
            android:text="@string/setting3"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/check3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

    </TableRow>
        <View
        android:layout_height="2dip"
        android:background="#FF0000" />

    <TableRow
        android:id="@+id/set4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/setting4"
            android:layout_gravity="left|center_vertical"
            android:text="@string/setting4"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/check4"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

    </TableRow>
        <View
        android:layout_height="2dip"
        android:background="#FF0000" />

    <TableRow
        android:id="@+id/set5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/setting5"
            android:layout_gravity="left|center_vertical"
            android:text="@string/setting5"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/check5"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

    </TableRow>
        <View
        android:layout_height="2dip"
        android:background="#FF0000" />

    <TableRow
        android:id="@+id/set6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/setting6"
            android:layout_gravity="left|center_vertical"
            android:text="@string/setting6"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/check6"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

    </TableRow>
        <View
        android:layout_height="2dip"
        android:background="#FF0000" />

    <TableRow
        android:id="@+id/set7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/setting7"
            android:layout_gravity="left|center_vertical"
            android:text="@string/setting7"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/check7"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

    </TableRow>
        <View
        android:layout_height="2dip"
        android:background="#FF0000" />
        


	<TableRow
        android:id="@+id/set8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical" >
           
        <TextView
        	android:id="@+id/setting8"
            android:text="@string/setting8"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/check8"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />
	</TableRow>
        <View
        android:layout_height="2dip"
        android:background="#FF0000" />


</TableLayout>