<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/background">    

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:src="@drawable/newlogo" />

    <EditText
        android:id="@+id/usernametv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:ems="10"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/passwordtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernametv"
        android:layout_below="@+id/usernametv"
        android:singleLine="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordtv"
        android:layout_below="@+id/passwordtv"
        android:layout_toLeftOf="@+id/regbtn"
        android:text="@string/login" />

    <Button
        android:id="@+id/regbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/passwordtv"
        android:layout_below="@+id/passwordtv"
        android:text="@string/register" />

    <Button
        android:id="@+id/override"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/passwordtv"
        android:layout_toRightOf="@+id/regbtn"
        android:text="Skip" />

    <TextView
        android:id="@+id/logintv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginbtn"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/regbtn"
        android:layout_below="@+id/loginbtn"
        android:gravity="center|top" />

</RelativeLayout>